name:
  haskell-ast

version:
  0.1.0.0

-- synopsis:
-- description:

license:
  BSD3

license-file:
  LICENSE

author:
  Daniel Gorin

maintainer:
  jcpetruzza@gmail.com

-- copyright:
category:
  Language

build-type:
  Simple

-- extra-source-files:
cabal-version:
  >=1.10

library
  exposed-modules:
    Language.Haskell98.AST
    Language.Haskell98.Parser

    Language.Haskell2010.AST
    Language.Haskell2010.Parser

    Language.GhcHaskell.AST
    Language.GhcHaskell.Parser

    Language.Haskell.AST.Core
    Language.Haskell.AST.Sugar
    Language.Haskell.AST.HSE

    Language.Haskell.AST.Exts.Arrows
    Language.Haskell.AST.Exts.FFI
    Language.Haskell.AST.Exts.GADTSyntax
    Language.Haskell.AST.Exts.HSX
    Language.Haskell.AST.Exts.HaRP
    Language.Haskell.AST.Exts.ImplicitParams
    Language.Haskell.AST.Exts.MultiParamTypeClasses
    Language.Haskell.AST.Exts.NoExts
    Language.Haskell.AST.Exts.ParallelListComp
    Language.Haskell.AST.Exts.PatternGuards
    Language.Haskell.AST.Exts.Patterns
    Language.Haskell.AST.Exts.Pragmas
    Language.Haskell.AST.Exts.RecursiveDo
    Language.Haskell.AST.Exts.StandaloneDeriving
    Language.Haskell.AST.Exts.TH
    Language.Haskell.AST.Exts.TransformListComp
    Language.Haskell.AST.Exts.TypeFamilies
    Language.Haskell.AST.Exts.ViewPatterns

 -- other-modules:
  build-depends:
      -- needs ghc 7.8 to be able to derive Typeable correctly
    base >= 4.7
   ,haskell-src-exts == 1.14.*

  hs-source-dirs:
    src

  ghc-options:
    -Wall

  default-language:
    Haskell2010

--  other-extensions:
